--- a/pages/announcements.html
+++ b/pages/announcements.html
@@ -101,7 +101,35 @@
 
     <!-- Same footer as other pages -->
     <footer>
-        <!-- Footer content -->
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Contact Us</h3>
+                <p>Email: info@deviacademy.edu</p>
+                <p>Phone: +1 234 567 8900</p>
+                <p>Address: Your School Address</p>
+            </div>
+            <div class="footer-section">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="admissions.html">Admissions</a></li>
+                    <li><a href="academics.html">Academics</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Follow Us</h3>
+                <div class="social-links">
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Devi Academy Senior Secondary School. All rights reserved.</p>
+        </div>
     </footer>
 
     <script src="../js/main.js"></script>
