--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
             <div class="nav-links">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="pages/about.html">About</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-trigger">About</a>
+                        <ul class="dropdown-content">
+                            <li><a href="pages/about/about.html">About Us</a></li>
+                            <li><a href="pages/about/founder.html">Our Founder</a></li>
+                            <li><a href="pages/about/directors.html">Board of Directors</a></li>
+                            <li><a href="pages/about/staff.html">Staff Directory</a></li>
+                            <li><a href="pages/about/affiliation.html">Affiliation Status</a></li>
+                        </ul>
                     <li><a href="pages/admissions.html">Admissions</a></li>
                     <li><a href="pages/academics.html">Academics</a></li>
                     <li><a href="pages/announcements.html">Announcements</a></li>
