--- a/pages/about/founder.html
+++ b/pages/about/founder.html
@@ -10,9 +10,7 @@
 </head>
 <body>
     <!-- Same header as about.html -->
-    <header>
-        <!-- Navigation content -->
-    </header>
+    <div id="header"></div>
 
     <main class="founder-page">
         <section class="page-header">
@@ -31,6 +29,13 @@
         <!-- Footer content -->
     </footer>
 
-    <script src="../../js/main.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/include.js"></script>
+    <script>
+        // Load header when the page loads
+        document.addEventListener('DOMContentLoaded', function() {
+            includeHTML('header', '/components/header.html');
+        });
+    </script>
 </body>
 </html>
