--- a/pages/about/founder.html
+++ b/pages/about/founder.html
@@ -29,12 +29,12 @@
         <!-- Footer content -->
     </footer>
 
-    <script src="js/main.js"></script>
-    <script src="js/include.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/include.js"></script>
     <script>
         // Load header when the page loads
         document.addEventListener('DOMContentLoaded', function() {
-            includeHTML('header', '/components/header.html');
+            includeHTML('header', 'components/header.html');
         });
     </script>
 </body>
